Prettified the homepage
Still need to fix the header

--- a/index.html
+++ b/index.html
@@ -11,17 +11,21 @@
     <body>
         <div class="Container">
             <header>
-                <div class="LeftSideHeader">
-                    <h1>Kinneret Group</h1>
-                </div>
-                <div class="RightSideHeader">
-                    <h2>&#128222 (646) 341-6912</h2>
-                </div>
+                <h2>Kinneret Group</h2>
+                <ul>
+                    <li><a href="#">Smart Tools</a></li>
+                    <li><a href="#">Sign In</a></li>
+                    <li><a href="tel:16463416912">(646) 341-6912</a></li>
+                </ul>
             </header>
             <div class="GetStarted">
-                <h1>Welcome to SquareFoot.</h1>
-                <h1>Let's find your next office.</h1>
-                <a href="Profile" class="SiteButton">Get Started</a>
+                <div class="TextBox">
+                    <h1>Welcome to Kinneret Group.</h1>
+                    <h1>Let's find your next office.</h1>
+                </div>
+                <div class="GetStartedButton">
+                    <a href="Profile/" class="SiteButton">Get Started</a>
+                </div>
             </div>
         </div>
     </body>
