Began Profile Form Architecture
Side bar
Main form
Margins
Progress Bar

Next: Main five individual divs and hide them
After: Use JS to toggle which one is shown

--- a/Profile/index.html
+++ b/Profile/index.html
@@ -3,17 +3,30 @@
     <head>
         <meta charset="utf-8">
         <link rel="stylesheet" href="styles.css">
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+        <script src="app.js"></script>
+
         <title>Office Profile</title>
     </head>
     <body>
-        <div class="Sidebar">
-            <ul class="progress-bar">
-                <li>
-                <li>
-                <li>
-                <li class="stop">
-                <li>
-            </ul>
+        <div class="Container">
+            <div class="SideBar">
+
+            </div>
+            <div class="MainPage">
+                <div class="InnerContainer">
+                    <h2>We're asking you a few questions to help find you the best space.</h2>
+                    <h2>This will only take a few minutes.</h2>
+
+                    <div class="ProgressBarContainer">
+                        <div class="ProgressBarColor">
+
+                        </div>
+                    </div>
+                </div>
+
+
+            </div>
         </div>
     </body>
 </html>
