Began adding the steps divs for the form
Im definitely in the shitter in regard to timeframe. But did a lot of
good work tonight.

--- a/Profile/index.html
+++ b/Profile/index.html
@@ -17,11 +17,29 @@
                 <div class="InnerContainer">
                     <h2>We're asking you a few questions to help find you the best space.</h2>
                     <h2>This will only take a few minutes.</h2>
+                    <div class="ProgressBarContainer"><div class="ProgressBarColor"></div></div>
 
-                    <div class="ProgressBarContainer">
-                        <div class="ProgressBarColor">
-
+                    <div class="Steps" id="One">
+                        <h1>Choose a size.</h1>
+                        <p>How many seats do you need?</p>
+                        <h3>Number of seats/employees</h3>
+                        <div class="InputBorder">
+                            <button type="button" name="button" class="PlusMinusButtons">-</button>
+                            <input type="number" name="numEmployees" value="20">
+                            <button type="button" name="button" class="PlusMinusButtons">+</button>
                         </div>
+                    </div>
+                    <div class="Steps" id="Two">
+
+                    </div>
+                    <div class="Steps" id="Three">
+
+                    </div>
+                    <div class="Steps" id="Four">
+
+                    </div>
+                    <div class="Steps" id="Five">
+
                     </div>
                 </div>
 
