--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                     <h1>Let's find your next office.</h1>
                 </div>
                 <div class="GetStartedButton">
-                    <a href="Profile/" class="SiteButton">Get Started</a>
+                    <a href="/Profile" class="SiteButton">Get Started</a>
                 </div>
             </div>
         </div>
