Plus&Minus buttons works and some styles

--- a/Profile/index.html
+++ b/Profile/index.html
@@ -29,9 +29,9 @@
                         <h3>Number of seats/employees</h3>
 
                         <div class="InputBorder">
-                            <button type="button" name="button" class="PlusMinusButtons">-</button>
-                            <input type="number" name="numEmployees" value="20">
-                            <button type="button" name="button" class="PlusMinusButtons">+</button>
+                            <button type="button" name="button" class="PlusMinusButtons" id="minusEmployees">-</button>
+                            <input type="number" name="numEmployees" value="20" id="numOfEmployees">
+                            <button type="button" name="button" class="PlusMinusButtons" id="plusEmployees">+</button>
                         </div>
                         <h3>Space Per Employee</h3>
                         <div class="RadioInputs">
